# ramcharitmanas-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  test_main.py
api/: app.py
api/res/: user.py
api/routers/: user_route.py
api/schemas/: __init__.py
database/: db.py  models.py
migrations/: env.py
migrations/versions/: 1777e93bfdd4_removed_verse_id_relationship.py  26d9bf212cab_added_verse_id_foreign_key.py  dfd423398585_initial_migration.py
mock/: __init__.py  mock_chapter1_response.py  mock_chapter1_verse1_response.py  mock_chapter1_verses_reponse.py  mock_chapter_response.py  mock_root_response.py
res/: chapter.py  hash.py  row2dict.py  translations.py  user.py
routers/: chapter_route.py  translations_route.py  user_route.py
schemas/: __init__.py  manas_schema.py  user_schema.py
