[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Naman Chauhan <chauhannaman98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
pytest = "^8.1.1"
httpx = "^0.27.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.1.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
